--- a/package.json
+++ b/package.json
@@ -1,32 +1,19 @@
 {
-	"name": "vscode-odoo",
-	"displayName": "vscode-odoo",
-	"description": "",
-	"version": "0.0.2",
-	"engines": {
-		"vscode": "^1.51.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-        "onView:vscode-odoo-models"
-	],
-	"main": "./dist/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "vscode-odoo.helloWorld",
-				"title": "Hello World"
-            }, {
-                "command": "vscode-odoo.update-models",
-                "title": "Update",
-                "icon": {
-                    "light": "static/img/refresh_light.svg",
-                    "dark": "static/img/refresh_dark.svg"
-                }
-            }
-        ],
+    "name": "vscode-odoo",
+    "displayName": "vscode-odoo",
+    "description": "",
+    "version": "0.0.2",
+    "engines": {
+        "vscode": "^1.51.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "activationEvents": [
+        "onView:vscode-odoo.odoo-models"
+    ],
+    "main": "./dist/extension.js",
+    "contributes": {
         "viewsContainers": {
             "activitybar": [
                 {
@@ -39,17 +26,9 @@
         "views": {
             "vscode-odoo-container": [
                 {
-                    "id": "vscode-odoo-models",
-                    "name": "Models"
-                }
-            ]
-        },
-        "menus": {
-            "view/title": [
-                {
-                    "command": "vscode-odoo.update-models",
-                    "when": "view == 'vscode-odoo-models'",
-                    "group": "navigation"
+                    "type": "webview",
+                    "id": "vscode-odoo.odoo-models",
+                    "name": "Search Models"
                 }
             ]
         },
@@ -65,31 +44,31 @@
             }
         }
     },
-	"scripts": {
-		"vscode:prepublish": "npm run package",
-		"compile": "webpack --devtool nosources-source-map --config ./build/node-extension.webpack.config.js",
-		"watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./build/node-extension.webpack.config.js",
-		"package": "webpack --mode production --config ./build/node-extension.webpack.config.js",
-		"test-compile": "tsc -p ./",
-		"test-watch": "tsc -watch -p ./",
-		"pretest": "npm run test-compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.51.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.0",
-		"@types/node": "^12.11.7",
-		"eslint": "^7.9.0",
-		"@typescript-eslint/eslint-plugin": "^4.1.1",
-		"@typescript-eslint/parser": "^4.1.1",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.0.2",
-		"vscode-test": "^1.4.0",
-		"ts-loader": "^8.0.3",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12"
-	}
+    "scripts": {
+        "vscode:prepublish": "npm run package",
+        "compile": "webpack --devtool nosources-source-map --config ./build/node-extension.webpack.config.js",
+        "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./build/node-extension.webpack.config.js",
+        "package": "webpack --mode production --config ./build/node-extension.webpack.config.js",
+        "test-compile": "tsc -p ./",
+        "test-watch": "tsc -watch -p ./",
+        "pretest": "npm run test-compile && npm run lint",
+        "lint": "eslint src --ext ts",
+        "test": "node ./out/test/runTest.js"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.51.0",
+        "@types/glob": "^7.1.3",
+        "@types/mocha": "^8.0.0",
+        "@types/node": "^12.11.7",
+        "eslint": "^7.9.0",
+        "@typescript-eslint/eslint-plugin": "^4.1.1",
+        "@typescript-eslint/parser": "^4.1.1",
+        "glob": "^7.1.6",
+        "mocha": "^8.1.3",
+        "typescript": "^4.0.2",
+        "vscode-test": "^1.4.0",
+        "ts-loader": "^8.0.3",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12"
+    }
 }
