strict / nonstrict search

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "vscode-odoo",
+    "publisher": "woopzz",
     "displayName": "vscode-odoo",
     "description": "",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "engines": {
         "vscode": "^1.51.0"
     },
